# WEB-basics

./: .gitignore
Lab1/client/: index.html  package-lock.json  package.json
Lab1/client/src/components/: ChatComponent.vue  LoginComponent.vue
Lab1/client/src/router/: index.ts
Lab1/client/src/service/: chat.ts
Lab1/client/src/views/: ChatView.vue
Lab1/server/: Cargo.toml
Lab1/server/src/: chat.rs  chat_service.rs  error.rs  main.rs  utils.rs
Lab2/server/: Cargo.toml
Lab2/server/.cargo/: config.toml.example
Lab2/server/src/: config.rs  error.rs  main.rs
Lab2/server/src/api/: error.rs  mod.rs
Lab2/server/src/api/auth/: auth_controller.rs  auth_middleware.rs  auth_service.rs  mod.rs
Lab2/server/src/api/jwt/: jwt_service.rs  mod.rs
Lab2/server/src/api/user/: mod.rs  user_controller.rs  user_repo.rs  user_service.rs
Lab2/server/src/api/utils/: mod.rs  validation_extractor.rs
Lab3/bot/: Cargo.toml
Lab3/bot/.cargo/: config.toml.example
Lab3/bot/src/: config.rs  error.rs  groq.rs  keyboard.rs  main.rs
Lab4/: ~WRL0085.tmp
Lab4/app/: Cargo.toml  cars.db
Lab4/app/migrations/: 20241114160302_create_cars_table.sql
Lab4/app/src/: db.rs  lib.rs  main.rs
Lab4/app/src/app/: mod.rs
Lab4/app/src/app/cars/: comp.rs  dal.rs  mod.rs  ssf.rs
Lab4/app/style/: main.scss
Lab4/test_leptos/leptos-tutorial/: Cargo.toml  index.html
Lab4/test_leptos/leptos-tutorial/src/: main.rs
Lab4/test_leptos/letptos-ssr/: Cargo.toml
Lab4/test_leptos/letptos-ssr/src/: app.rs  main.rs
Lab5/: app.txt
