[package]
name = "code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
warp = "0.3.7"
futures-util = "0.3.30"
tokio-stream = "0.1.16"
thiserror = "1.0.64"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

