[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
jsonwebtoken = "9.3.0"
poem = "3.1.1"
thiserror = "1.0.64"
tokio = {version = "1.40.0", features = ["full"]}
serde = {version = "1.0", features = ["derive"] }
chrono = "0.4.26"
clap = { version = "4.5.19", features = ["derive"] }
sha3 = "0.10.8"
serde_json = "1.0.128"
strum = "0.26.3"
strum_macros = "0.26.4"
validator = { version = "0.18.1", features = ["derive"] }
mime = "0.3.17"
