[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.64"
anyhow = "1.0.89"
